--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="navbar">
         <a id="logo1">Portfolio</a>
         <i class="fa-solid fa-house"></i>
-        <a href="index.html">Homee</a>
+        <a href="index.html">Home</a>
         <i class="fa-solid fa-user-graduate"></i>
         <a href="education.html">Education</a>
         <i class="fa-solid fa-code"></i>
